# groundrails

./: .copier-answers.yml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.claude/: CLAUDE.md  JOURNAL.md
.claude/skills/groundrails/: SKILL.md
.github/workflows/: ci.yml
aws/: Dockerfile  README.md  e2e.sh  event.example.json  handler.py  requirements-lambda.txt
docs/: acc-criteria-grounder.md  api-reference.md  aws-deployment.md  calibration-howto.md  calibration-reference.md  cli-reference.md  dataset-methodology-receipt.md  grounding_calibration.md  grounding_concept.md  grounding_improvements_hypothesis.md  grounding_improvements_report.md  lost_in_the_middle_grounding_analysis.md  lost_in_the_middle_summary.md
docs/auxiliary/: vllm-reasoning-model-sm120-recipe.md
docs/dataset/: 2026-06-01-how-to-build-golden-dataset.md  golden-dataset.md
docs/experiments/: deberta-v3-quantization-experiments.md  explainer-ablative-hypothesis-testing.md  joint-grounding-experiments.md  lexical-grounding-experiments.md  lexical-grounding-sota.md  semantic-grounding-experiments.md  semantic-grounding-sota.md
docs/forensics/: svg-infographics-plumbing-forensics.md  svg-infographics-token-forensics.md
docs/medium/: article_02_grounding_analysis.md  article_02_summary.md  article_02_svg-infographics.md
docs/medium/images_article_02/: article-cover.txt
experiments/: build_gold_v3.py
experiments/grounding/: BENCHMARK.md  RESULTS.md  build_combined.py  claims_judge.py  gold_v2.py  harness.py  lab.py  mechanisms.py  mt.py  retrain_manifolds.py  round9.py
experiments/grounding-lexical/: RESEARCH.md  e2e.py  harness.py  plots.py  round9.py  synth_mt.py  vitaminc_eval.py
experiments/grounding-lexical/logs/: README.md
experiments/grounding-lexical/references/: README.md  antonym_synonym_2016.md  counter_fitting_2016.md
experiments/grounding-semantic/: README.md  bench_grounder_cascade.py  bench_grounder_round2.py  bench_mechanical_levers.py  build_golden_v4.py  build_ov_grounder.py  grounding_ensemble.py  grounding_hypotheses.py  grounding_models.py  grounding_openvino.py  joint_premise_score.py  joint_wirings.py  joint_xlingual.py  lex_v3.py  perlang_honest.py  push_ov_models_to_hf.py  r4_premise_eval.py  resample_probe.py  run_grounder_full.py  score_enriched.py  score_int8_fullgold.py  score_ov_pipeline.py  score_vitaminc.py
experiments/grounding/references/: .gitignore  vitaminc_2021.md
logs/: README.md
notebooks/: 01-kj-calibration-demo.ipynb  05-kj-H17-crosslingual-manifold-retrain.ipynb
notebooks/dataset/: 01-kj-llm-judge.ipynb
notebooks/grounding-lexical/: 01-kj-calibration-demo.ipynb  02-kj-sat-openvino-conversion.ipynb  03-kj-H12-maxgap-batch-experiment.ipynb  04-kj-H13-H16-sat-extraction-atomic-alignment-negation.ipynb
notebooks/grounding-semantic/: 01-kj-grounding-model-comparison.ipynb  02-kj-deberta-int8-smoothquant.ipynb  03-kj-openvino-grounder-pipeline.ipynb  04-kj-grounder-latency.ipynb  05-kj-grounding-final-hypotheses.ipynb  06-kj-grounding-round2.ipynb  07-kj-grounding-sota-benchmark.ipynb  08-kj-joint-lexical-semantic-benchmark.ipynb  09-kj-grounding-round4-joint-premise.ipynb  _build_comparison_notebook.py  _diag_models.py  _diag_one.py
references/: README.md
references/grounding-results/: BENCHMARK.md  OPTIMIZATION_SUMMARY.md  PROGRAM.md  README.md  calibration_cv.json  hypothesis.md  lessons_learned.md  lexical-benchmark.md  report.md
references/grounding-results/data/: han2024.txt  han_claims.json  liu2023.txt  liu_claims.json  ye2024.txt  ye_claims.json
references/grounding-results/scripts/: bench_agreement_gap.py  bench_lexical.py  bench_liu_accuracy.py  bench_numeric.py  bench_portability.py  calibrate.py  calibrate_cv.py  validate.py
reports/: grounding_ensemble.md  grounding_joint_wirings.md  grounding_joint_xlingual.md  grounding_r4_premise.md  grounding_vitaminc_combined.md  semantic_tier_block.yaml
scripts/: sat_vs_regex_extraction.py  sat_vs_regex_fair.py  simulate_calibration.py  validate_public_grounding.py
src/groundrails/: __init__.py  bootstrap.py  calibration.py  chunking.py  claims.py  cli.py  config.py  config_document_processing.yaml  consistency.py  dataset.py  entity_check.py  extract.py  features.py  grounding.py  joint.py  lexical.py  lexical_mt.py  nli.py  plots.py  semantic.py  semantic_ov.py  settings.py
src/groundrails/modeling/: predict.py  train.py
src/groundrails/sat/: LICENSE  __init__.py  _config.py  _tokenizer.py  _utils.py  extract.py  ov_backend.py  segmenter.py
tests/: conftest.py  test_bootstrap.py  test_calibration.py  test_claims.py  test_cli.py  test_config.py  test_document_processing.py  test_equivalence_golden.py  test_grounding_document.py  test_lexical_grounding.py  test_mt_bridge.py  test_recalibration.py  test_robustness.py  test_sat_segmenter.py  test_semantic_grounder_equivalence.py  test_semantic_switch.py  test_unsupported_language.py
tests/data/: grounding_golden.json
tests/fixtures/: calibration_multilingual.jsonl
