[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundrails"
version = "0.1.0"
description = "Grounding guardrails for agentic RAG - deterministic claim verification"
authors = [
    { name = "Konrad Jelen" },
]
license = "MIT"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "loguru",
    "tqdm",
    "typer",
    "python-dotenv",
    "botocore",
]

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "ipython",
    "nbdime",
    "pip",
    "pytest",
    "pytest-cov",
    "ruff",
    "awscli",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["groundrails*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 99
src = ["src/groundrails"]
include = ["pyproject.toml", "src/groundrails/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["groundrails"]
force-sort-within-sections = true
