[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "groundrails"
version = "1.0.35"
description = "Grounding guardrails for agentic RAG - deterministic claim verification"
authors = [
    { name = "Konrad Jelen" },
]
license = "MIT"
readme = "README.md"
requires-python = "~=3.12.0"
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "loguru",
    "tqdm",
    "typer",
    "python-dotenv",
    "botocore",
    # --- grounder runtime stack (from parent stellars-claude-code-plugins) ---
    "numpy",
    "pandas>=2.0",
    "scipy",
    "scikit-learn>=1.3",              # manifold fit path (LogisticRegression)
    "pyarrow>=14.0",                  # parquet gold read
    "pyyaml",
    "pydantic>=2",                    # claims-file schema validation
    "rank-bm25>=0.2.2",
    "rapidfuzz>=3.14.5",
    "wordfreq>=3.0",                  # length-robust background token rarity
    "nltk>=3.8",                      # WordNet antonym-flip (corpus fetched lazily)
    "lingua-language-detector>=2.0",  # per-claim language detection
    "huggingface_hub>=0.23",          # SaT OpenVINO IR download
    "openvino>=2025.0",               # native INT8 SaT sentence splitter
    "tokenizers>=0.20",               # xlm-roberta tokenizer for SaT
    "argostranslate>=1.9",            # torch-free MT bridge (CTranslate2)
    "ctranslate2>=4.0",               # MT inference engine
    "sacremoses>=0.1",                # MT tokenisation
    "sentencepiece>=0.2",             # MT subword model
    "subword-nmt>=0.3",               # MT BPE
    "bambi>=0.13",                    # Bayesian calibration
    "pymc>=5.10",                     # calibration sampler
    "arviz>=0.17",                    # calibration diagnostics
]

[project.optional-dependencies]
dev = [
    "build",
    "ipykernel",
    "ipython",
    "nbdime",
    "pip",
    "pytest",
    "pytest-cov",
    "ruff",
    "awscli",
    "jupyter",
    "matplotlib",                     # experiment plots (experiments/grounding-lexical/plots.py)
    "jenkspy",                        # max-gap / natural-breaks batch threshold experiment
    "nncf",                           # INT8 quantization for SaT conversion (notebook 02)
    "onnxruntime>=1.17",              # SaT model conversion (notebooks 02/04)
    "wtpsplit-lite",                  # SaT lite splitter (notebooks 02/04) - verify exact dist name
    "rich",                           # notebook rich output
]
semantic = [
    "onnxruntime>=1.17",              # NLI cross-encoder + embedding ONNX runtime
    "transformers>=4.40",             # tokenizer/model loading for the semantic layer
    "faiss-cpu>=1.7",                 # embedding retrieval index
]
# Semantic grounder research leg (experiments/grounding-semantic). The deployable
# grounder serves three int8 OpenVINO IRs (bge-m3 pre-filter + bge-reranker + mDeBERTa-NLI,
# pulled from HF) via the transformers tokenizer; the cached-score ensemble/eval reads the
# gold parquet with polars. openvino + huggingface_hub + scikit-learn + pyarrow are already
# core deps. torch is dev-only (the GPU reference scoring that built the cached .npy) - not
# needed to serve the IRs or run the cached-score eval.
semantic-grounder = [
    "transformers>=4.44",             # tokenizer for the OpenVINO int8 IRs
    "polars>=1.30",                   # gold parquet read in the eval / ensemble
]
# Everything a user might want: the E5/NLI ONNX path + the OpenVINO cascade switch.
# Dev tooling stays in `dev`, not here.
all = [
    "groundrails[semantic]",
    "groundrails[semantic-grounder]",
]

[project.scripts]
groundrails = "groundrails.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
groundrails = ["config_*.yaml"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["groundrails*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 99
src = ["src/groundrails"]
include = ["pyproject.toml", "src/groundrails/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["groundrails"]
force-sort-within-sections = true
